refactor(core): [issue-24]  refactor core module to align with data and engine spi